# team-flow-subscription-service

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
src/: manage.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/project/: asgi.py
src/project/settings/: base.py
src/subs/: admin.py  apps.py  models.py  urls.py  views.py
src/subs/migrations/: 0001_initial.py
src/subs/templates/: subscribe.html
