[tool.poetry]
name = "team-flow-subscription-service"
version = "0.1.0"
description = ""
authors = ["dattar321 <dattar321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-split-settings = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
