[tool.poetry]
name = "tf-subs"
version = "0.1.0"
description = ""
authors = ["dattar321 <dattar321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
stripe = "^9.7.0"
django-split-settings = "^1.3.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
